Css and content change

--- a/prototypes/current/index.html
+++ b/prototypes/current/index.html
@@ -127,9 +127,9 @@
               <a class="articleBlock" style="background-image: url('../../img_data/prototypes/cover/Spark Message List.png');" target='_self' href='spark-message-list.html'>
                   <div class='articleBlock_cover'>
                       <p class='list_space'></p>
-                      <p class="list_title">Message List Features</p>
+                      <p class="list_title">Spark Message List</p>
                       <p class='list_item_date'>2017-5-11</p>
-                      <p class='list_item_desc'>Desktop prototype for the message list features</p>
+                      <p class='list_item_desc'>Desktop prototype for Spark message list</p>
                   </div>
               </a>  
                  <!-- <hr class="divider" />   -->
@@ -157,7 +157,7 @@
               <a class="articleBlock" style="background-image: url('../../img_data/prototypes/cover/Spark OBTP_Cover.png');" target='_self' href='spark-obtp.html'>
                   <div class='articleBlock_cover'>
                       <p class='list_space'></p>
-                      <p class="list_title">Spark OBTP 2017</p>
+                      <p class="list_title">Spark OBTP</p>
                       <p class='list_item_date'>2017-1-20</p>
                       <p class='list_item_desc'>Mobile and Desktop OBTP (One Button to Push) prototype.</p>
                   </div>
