--- a/prototypes/current/spark-message-list.html
+++ b/prototypes/current/spark-message-list.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Message List Features</title>
+  <title>Spark Message List</title>
 <meta charset='utf-8'>
 <link rel="icon" type="image/x-icon" href="../../img/fav.ico">
 <meta name="viewport" content="width=device-width,minimal-ui,initial-scale=1.0" />
@@ -130,21 +130,21 @@
         <div class="section">
           <article class='article'>
 	<header class='article_header'>
-		<h1>Message List Features</h1>
+		<h1>Spark Message List</h1>
 	</header>
 	<div class='article_body'>
 		<h4 id="desktop-prototype">Desktop Prototype</h4>
 <p><a href="https://uxccds.github.io/Spark-Hype-MVO/message-list.html">https://uxccds.github.io/Spark-Hype-MVO/message-list.html</a></p>
-<h1 id="instuctions">Instuctions</h1>
+<h1 id="instructions">Instructions</h1>
 <p><img src="../../img_data/prototypes/Desktop-2x.png" alt="Desktop"/></p>
-<p>1) Please use Chrome to view the prototype.</p>
-<p>2) Select either the Regular View or the condensed view to continue.</p>
-<p>3) Try clear browser cache first if you encounter any issues.</p>
-<h3 id="goals">Goals</h3>
-<p>This prototype is to test the following features in the regular view and the condensed view:</p>
-<p>1) Pin to top - Right click on conversations to see this function. All pinned messages show on top of the list</p>
-<p>2) Tag filters - these filters only shows when there are relevant conversation in the users&#39; spaces. There are three filters available: Unread, @mention, and draft</p>
-<p>3) Notification off mode - only available in spaces</p>
+<p>1) Use Chrome browser to view the prototype for the best results.</p>
+<p>2) Select &quot;Regular&quot; or &quot;Condensed&quot; view to continue.</p>
+<p>3) If you encounter any issues, clear the  browser cache and reload page</p>
+<h1 id="goals">Goals</h1>
+<p>The purpose of the prototype is displaying regular and condensed views of the Spark message list. The following features are:</p>
+<p>1) <strong>Pin to top</strong> - Right click on people/spaces conversations to see this function. All pinned messages will show at the top of the list</p>
+<p>2) <strong>Tag filters</strong> - These filters only show when relevant conversation status (e.g. unread, @mention, or draft) are available. </p>
+<p>3) <strong>Notification settings</strong> - @mentions or All messages</p>
 		
 	</div>
 	<!-- hiding pagination per Damon's feedback 
@@ -164,13 +164,13 @@
     <ul class='sideMenu'>
 	
 	
-		<li><a class=current  href='spark-message-list.html'>Message List Features</a></li>
+		<li><a class=current  href='spark-message-list.html'>Spark Message List</a></li>
 	
 		<li><a   href='spark-space-privacy.html'>Spark Space Privacy</a></li>
 	
 		<li><a   href='spark-pairing.html'>Spark Device Pairing</a></li>
 	
-		<li><a   href='spark-obtp.html'>Spark OBTP 2017</a></li>
+		<li><a   href='spark-obtp.html'>Spark OBTP</a></li>
 	
 		<li><a   href='spark20170124.html'>Spark 2017.1.24</a></li>
 	
