--- a/prototypes/current/spark-obtp.html
+++ b/prototypes/current/spark-obtp.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Spark OBTP 2017</title>
+  <title>Spark OBTP</title>
 <meta charset='utf-8'>
 <link rel="icon" type="image/x-icon" href="../../img/fav.ico">
 <meta name="viewport" content="width=device-width,minimal-ui,initial-scale=1.0" />
@@ -130,7 +130,7 @@
         <div class="section">
           <article class='article'>
 	<header class='article_header'>
-		<h1>Spark OBTP 2017</h1>
+		<h1>Spark OBTP</h1>
 	</header>
 	<div class='article_body'>
 		<h4 id="mobile-prototype">Mobile Prototype</h4>
@@ -144,22 +144,32 @@
 <img src="../../img_data/prototypes/Desktop-2x.png" alt="Desktop"/>
 <img src="../../img_data/prototypes/MX800-2x.png" alt="MX800"/></p>
 <h3 id="on-mobile">On Mobile</h3>
-<p>1) Please use Chrome (mobile mode) or IPhone (webapp mode) to view the prototype.</p>
-<p>2) Try clear browser cache first if you see any issues.</p>
-<p>3) Choose a version to continue.</p>
+<ol>
+<li><p>For the most optimal experience, use Chrome (mobile mode) or IPhone (webapp mode) to view this prototype.</p>
+</li>
+<li><p>Select a scenario and continue.</p>
+</li>
+<li><p>If you encounter any issues, clear the  browser cache and reload page.</p>
+</li>
+</ol>
 <h3 id="on-desktop">On Desktop</h3>
-<p>1) Please use Chrome to view this prototype.</p>
+<ol>
+<li>Please use Chrome browser to view this prototype.</li>
+</ol>
 <h3 id="on-mx800">On MX800</h3>
-<p>1) Please use Chrome to view this prototype.</p>
-<p>2) The MX logic for hot key</p>
+<p><em>Disclaimer: This is simulating an experience on the Sparkboard by using a secondary desktop (e.g. Laptop)</em></p>
+<ol>
+<li><p>From the laptop, run the prototype in Chrome browser and pair/screen shared to a Spark Board</p>
+</li>
+<li><p>Use the following hot keys to navigate through the steps:</p>
+</li>
+</ol>
 <ul>
-<li><p>&#39;0&#39; - go to step 0</p>
+<li><p>&#39;1&#39; - Trigger the greeting and update the mobile/desktop prototype</p>
 </li>
-<li><p>&#39;1&#39; - go to step 1 and update the mobile/desktop prototype</p>
+<li><p>&#39;d&#39; - Switch to desktop user (Brandon)</p>
 </li>
-<li><p>&#39;d&#39; - change the scenario to desktop mode</p>
-</li>
-<li><p>&#39;m&#39; - change the scenario to mobile mode</p>
+<li><p>&#39;m&#39; - Switch to mobile user (Catherine)</p>
 </li>
 </ul>
 <p>3) You need to add a parameter after the url for both MX prototype and mobile/desktop prototype.</p>
@@ -189,13 +199,13 @@ The parameter&#39;s value could be &#39;CCDS&#39;, &#39;UE&#39;, &#39;UT&#39;, &
     <ul class='sideMenu'>
 	
 	
-		<li><a   href='spark-message-list.html'>Message List Features</a></li>
+		<li><a   href='spark-message-list.html'>Spark Message List</a></li>
 	
 		<li><a   href='spark-space-privacy.html'>Spark Space Privacy</a></li>
 	
 		<li><a   href='spark-pairing.html'>Spark Device Pairing</a></li>
 	
-		<li><a class=current  href='spark-obtp.html'>Spark OBTP 2017</a></li>
+		<li><a class=current  href='spark-obtp.html'>Spark OBTP</a></li>
 	
 		<li><a   href='spark20170124.html'>Spark 2017.1.24</a></li>
 	
