--- a/prototypes/current/spark-pairing.html
+++ b/prototypes/current/spark-pairing.html
@@ -145,26 +145,27 @@
 <img src="../../img_data/prototypes/MX800-2x.png" alt="MX800"/></p>
 <h3 id="on-mobile">On Mobile</h3>
 <ol>
-<li><p>Please use Chrome (mobile mode) or IPhone (webapp mode) to view the prototype.</p>
+<li><p>For the most optimal experience, use Chrome (mobile mode) or IPhone (webapp mode) to view this prototype.</p>
 </li>
-<li><p>If you see any issues, try clearing your browser cache first.</p>
+<li><p>Select a scenario and continue.</p>
 </li>
-<li><p>Choose a version to continue.</p>
+<li><p>If you encounter any issues, clear the  browser cache and reload page.</p>
 </li>
 </ol>
 <h3 id="on-desktop">On Desktop</h3>
 <ol>
-<li>Please use Chrome to view this prototype.</li>
+<li>Please use Chrome browser to view this prototype.</li>
 </ol>
-<h3 id="on-mx800">On MX800</h3>
+<h3 id="on-spark-board">On Spark Board</h3>
+<p><em>Disclaimer: This is simulating an experience on the Sparkboard by using a secondary desktop (e.g. Laptop)</em></p>
 <ol>
-<li><p>Please use Chrome to view this prototype.</p>
+<li><p>From the laptop, run the prototype in Chrome browser and pair/screen shared to a Spark Board</p>
 </li>
-<li><p>You can use the following hot keys to go to the screens:</p>
+<li><p>You can use the following hot keys to get to the screens:</p>
 <ul>
 <li>key space -&gt; black screen</li>
 <li>key 1 -&gt; the &#39;hello&#39; screen.</li>
-<li>key 2 -&gt; the screen with activity balls</li>
+<li>key 2 -&gt; the screen with activity menu</li>
 </ul>
 </li>
 </ol>
@@ -187,13 +188,13 @@
     <ul class='sideMenu'>
 	
 	
-		<li><a   href='spark-message-list.html'>Message List Features</a></li>
+		<li><a   href='spark-message-list.html'>Spark Message List</a></li>
 	
 		<li><a   href='spark-space-privacy.html'>Spark Space Privacy</a></li>
 	
 		<li><a class=current  href='spark-pairing.html'>Spark Device Pairing</a></li>
 	
-		<li><a   href='spark-obtp.html'>Spark OBTP 2017</a></li>
+		<li><a   href='spark-obtp.html'>Spark OBTP</a></li>
 	
 		<li><a   href='spark20170124.html'>Spark 2017.1.24</a></li>
 	
