--- a/prototypes/current/spark20170124.html
+++ b/prototypes/current/spark20170124.html
@@ -164,13 +164,13 @@
     <ul class='sideMenu'>
 	
 	
-		<li><a   href='spark-message-list.html'>Message List Features</a></li>
+		<li><a   href='spark-message-list.html'>Spark Message List</a></li>
 	
 		<li><a   href='spark-space-privacy.html'>Spark Space Privacy</a></li>
 	
 		<li><a   href='spark-pairing.html'>Spark Device Pairing</a></li>
 	
-		<li><a   href='spark-obtp.html'>Spark OBTP 2017</a></li>
+		<li><a   href='spark-obtp.html'>Spark OBTP</a></li>
 	
 		<li><a class=current  href='spark20170124.html'>Spark 2017.1.24</a></li>
 	
