--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -121,8 +121,8 @@
       <!--content blocks -->
       <div class="block-wrapper">
         <div class="block-l" style="background-image:url('../img/project.jpg')"> <a href="./current/index.html"><span>Current Projects</span></a></div>
-        <div class="block-r" style="background-image:url('../img/experimental.jpg')"> <a href="./experimental/index.html"><span>Experimental</span></a></div>
-        <div class="block-l" style="background-image:url('../img/archiving.jpeg')"> <a href="./archived/index.html"><span>Archived</span></a></div>
+        <div class="block-r" style="background-image:url('../img/experimental.jpg')"> <a href="./experimental/index.html"><span>Experimental Concepts</span></a></div>
+        <div class="block-l" style="background-image:url('../img/archiving.jpeg')"> <a href="./archived/index.html"><span>Archived Projects</span></a></div>
         <div class="block-r" style="background-image:url('../img/faq.jpg')"> <a href="./guide/index.html"><span>FAQ & Troubleshoot</span></a></div>
       </div>
     </div>
