--- a/prototypes/current/spark-space-privacy.html
+++ b/prototypes/current/spark-space-privacy.html
@@ -138,13 +138,13 @@
 <h1 id="instuctions-for-use">Instuctions for use</h1>
 <p><img src="../../img_data/prototypes/Mobile-2x.png" alt="mobile"/></p>
 <h3 id="on-mobile">On Mobile</h3>
-<p>1) Please use Chrome (mobile mode) or IPhone (webapp mode) to view the prototype.</p>
-<p>2) Try clear browser cache first if you see any issues.</p>
-<p>3) Choose a version to continue.</p>
+<p>1) For the most optimal experience, use Chrome (mobile mode) or IPhone (webapp mode) to view this prototype.</p>
+<p>2) Select a scenario and continue.</p>
+<p>3) If you encounter any issues, clear the  browser cache and reload page.</p>
 <h3 id="goals">Goals</h3>
-<p>This prototype is to compare the two options of when to hide the &quot;external participant&quot; and &quot;privacy&quot; labels.</p>
-<p>1) In scenario A, the external participant and privacy icons hide only as the input text gets longer and closer to them.</p>
-<p>2) In scenario B, the external participant and privacy icons hide themselves right after the user starts to type</p>
+<p>This prototype demonstrates when the &quot;external participants&quot; and &quot;privacy&quot; icons are hidden.</p>
+<p>1) In scenario A, the &quot;external participants&quot; and &quot;privacy icons&quot; are hidden only when text is near the icons.</p>
+<p>2) In scenario B, the &quot;external participants&quot; and &quot;privacy icons&quot; are hidden immediately after the users start typing.</p>
 		
 	</div>
 	<!-- hiding pagination per Damon's feedback 
@@ -164,13 +164,13 @@
     <ul class='sideMenu'>
 	
 	
-		<li><a   href='spark-message-list.html'>Message List Features</a></li>
+		<li><a   href='spark-message-list.html'>Spark Message List</a></li>
 	
 		<li><a class=current  href='spark-space-privacy.html'>Spark Space Privacy</a></li>
 	
 		<li><a   href='spark-pairing.html'>Spark Device Pairing</a></li>
 	
-		<li><a   href='spark-obtp.html'>Spark OBTP 2017</a></li>
+		<li><a   href='spark-obtp.html'>Spark OBTP</a></li>
 	
 		<li><a   href='spark20170124.html'>Spark 2017.1.24</a></li>
 	
