--- a/prototypes/current/spark-space-privacy.html
+++ b/prototypes/current/spark-space-privacy.html
@@ -135,13 +135,14 @@
 	<div class='article_body'>
 		<h4 id="mobile-prototype">Mobile Prototype</h4>
 <p><a href="https://uxccds.github.io/SparkMobile/ExternalParticipant/SpacePrivacy.html">https://uxccds.github.io/SparkMobile/ExternalParticipant/SpacePrivacy.html</a></p>
-<h1 id="instuctions-for-use">Instuctions for use</h1>
+<h1 id="instuctions">Instuctions</h1>
 <p><img src="../../img_data/prototypes/Mobile-2x.png" alt="mobile"/></p>
 <h3 id="on-mobile">On Mobile</h3>
 <p>1) For the most optimal experience, use Chrome (mobile mode) or IPhone (webapp mode) to view this prototype.</p>
 <p>2) Select a scenario and continue.</p>
 <p>3) If you encounter any issues, clear the  browser cache and reload page.</p>
-<p>#Goals<br>This prototype demonstrates when the &quot;external participants&quot; and &quot;privacy&quot; icons are hidden.</p>
+<h1 id="goals">Goals</h1>
+<p>This prototype demonstrates when the &quot;external participants&quot; and &quot;privacy&quot; icons are hidden.</p>
 <p>1) In scenario A, the &quot;external participants&quot; and &quot;privacy icons&quot; are hidden only when text is near the icons.</p>
 <p>2) In scenario B, the &quot;external participants&quot; and &quot;privacy icons&quot; are hidden immediately after the users start typing.</p>
 		
