--- a/prototypes/current/spark-obtp.html
+++ b/prototypes/current/spark-obtp.html
@@ -139,7 +139,7 @@
 <p><a href="https://uxccds.github.io/Spark-Hype-MVO/OBTP-Prototype.html">https://uxccds.github.io/Spark-Hype-MVO/OBTP-Prototype.html</a></p>
 <h4 id="mx800-prototype">MX800 Prototype</h4>
 <p><a href="https://uxccds.github.io/SparkMobile/pair/page/mx.html">https://uxccds.github.io/SparkMobile/pair/page/mx.html</a></p>
-<h1 id="instuctions-for-use">Instuctions for use</h1>
+<h1 id="instructions">Instructions</h1>
 <p><img src="../../img_data/prototypes/Mobile-2x.png" alt="mobile"/>
 <img src="../../img_data/prototypes/Desktop-2x.png" alt="Desktop"/>
 <img src="../../img_data/prototypes/MX800-2x.png" alt="MX800"/></p>
