--- a/prototypes/current/spark-pairing.html
+++ b/prototypes/current/spark-pairing.html
@@ -139,7 +139,7 @@
 <p><a href="https://uxccds.github.io/Spark-Hype-MVO/devicepairing-desktop.html">https://uxccds.github.io/Spark-Hype-MVO/devicepairing-desktop.html</a></p>
 <h4 id="sparkboard-prototype">SparkBoard Prototype</h4>
 <p><a href="https://uxccds.github.io/SparkMobile/pair/page/sparkboardpair.html">https://uxccds.github.io/SparkMobile/pair/page/sparkboardpair.html</a></p>
-<h1 id="instuctions">Instuctions</h1>
+<h1 id="instructions">Instructions</h1>
 <p><img src="../../img_data/prototypes/Mobile-2x.png" alt="mobile"/>
 <img src="../../img_data/prototypes/Desktop-2x.png" alt="Desktop"/>
 <img src="../../img_data/prototypes/SparkBoard-2x.png" alt="SparkBoard"/></p>
