--- a/prototypes/current/spark-space-privacy.html
+++ b/prototypes/current/spark-space-privacy.html
@@ -135,7 +135,7 @@
 	<div class='article_body'>
 		<h4 id="mobile-prototype">Mobile Prototype</h4>
 <p><a href="https://uxccds.github.io/SparkMobile/ExternalParticipant/SpacePrivacy.html">https://uxccds.github.io/SparkMobile/ExternalParticipant/SpacePrivacy.html</a></p>
-<h1 id="instuctions">Instuctions</h1>
+<h1 id="instructions">Instructions</h1>
 <p><img src="../../img_data/prototypes/Mobile-2x.png" alt="mobile"/></p>
 <h3 id="on-mobile">On Mobile</h3>
 <p>1) For the most optimal experience, use Chrome (mobile mode) or IPhone (webapp mode) to view this prototype.</p>
