--- a/prototypes/current/spark-obtp.html
+++ b/prototypes/current/spark-obtp.html
@@ -16,6 +16,8 @@
 <style type="text/css"></style>
 
   <link rel="stylesheet" type="text/css" href="../../css/detail.css" media="screen">
+  <link rel="stylesheet" type="text/css" href="../../css/monokai_sublime.css" media="screen">
+  <script type="text/javascript" src="../../js/highlight.pack.js"></script>
 </head>
 <body>
   <!-- nav -->
@@ -131,6 +133,7 @@
           <article class='article'>
 	<header class='article_header'>
 		<h1>Spark OBTP</h1>
+		
 	</header>
 	<div class='article_body'>
 		<h4 id="mobile-prototype">Mobile Prototype</h4>
@@ -190,7 +193,7 @@ The parameter&#39;s value can be &#39;CCDS&#39;, &#39;UE&#39;, &#39;UT&#39;, &#3
 	<footer class='article_footer'>
 
 		<div class="pagination">
-			<a  class="prev" href="spark-pairing.html">← Prev</a>
+			<a  class="prev" href="spark-space-privacy.html">← Prev</a>
 			<a  class="next" href="spark20170124.html">Next →</a> 	 	
 		</div>		
 	</footer>-->
@@ -203,11 +206,11 @@ The parameter&#39;s value can be &#39;CCDS&#39;, &#39;UE&#39;, &#39;UT&#39;, &#3
     <ul class='sideMenu'>
 	
 	
+		<li><a   href='spark-pairing.html'>Spark Device Pairing</a></li>
+	
 		<li><a   href='spark-message-list.html'>Spark Message List</a></li>
 	
 		<li><a   href='spark-space-privacy.html'>Spark Space Privacy</a></li>
-	
-		<li><a   href='spark-pairing.html'>Spark Device Pairing</a></li>
 	
 		<li><a class=current  href='spark-obtp.html'>Spark OBTP</a></li>
 	
@@ -222,5 +225,6 @@ The parameter&#39;s value can be &#39;CCDS&#39;, &#39;UE&#39;, &#39;UT&#39;, &#3
 	<p>UX Prototype Team ©2016-2017 <a target="_blank" href="https://en.wikipedia.org/wiki/MIT_License" class='license'>MIT license</a></p>
 </footer>
 <script type="text/javascript">hljs.initHighlightingOnLoad();</script>
+ <script type="text/javascript">hljs.initHighlightingOnLoad();</script>
 </body>
 </html>
