--- a/prototypes/archived/spark-p1-2016.html
+++ b/prototypes/archived/spark-p1-2016.html
@@ -16,6 +16,8 @@
 <style type="text/css"></style>
 
   <link rel="stylesheet" type="text/css" href="../../css/detail.css" media="screen">
+  <link rel="stylesheet" type="text/css" href="../../css/monokai_sublime.css" media="screen">
+  <script type="text/javascript" src="../../js/highlight.pack.js"></script>
 </head>
 <body>
   <!-- nav -->
@@ -131,6 +133,7 @@
           <article class='article'>
 	<header class='article_header'>
 		<h1>Spark P1 2016</h1>
+		
 	</header>
 	<div class='article_body'>
 		<p>#Summary
@@ -196,5 +199,6 @@ To let users to adapt to our new Sparl desogm more smoothly, UXCCDS team defined
 	<p>UX Prototype Team ©2016-2017 <a target="_blank" href="https://en.wikipedia.org/wiki/MIT_License" class='license'>MIT license</a></p>
 </footer>
 <script type="text/javascript">hljs.initHighlightingOnLoad();</script>
+ <script type="text/javascript">hljs.initHighlightingOnLoad();</script>
 </body>
 </html>
