--- a/prototypes/archived/webex-on-wp8.html
+++ b/prototypes/archived/webex-on-wp8.html
@@ -16,6 +16,8 @@
 <style type="text/css"></style>
 
   <link rel="stylesheet" type="text/css" href="../../css/detail.css" media="screen">
+  <link rel="stylesheet" type="text/css" href="../../css/monokai_sublime.css" media="screen">
+  <script type="text/javascript" src="../../js/highlight.pack.js"></script>
 </head>
 <body>
   <!-- nav -->
@@ -131,6 +133,7 @@
           <article class='article'>
 	<header class='article_header'>
 		<h1>WebEx on WP8</h1>
+		
 	</header>
 	<div class='article_body'>
 		<h4 id="web-page">Web Page</h4>
@@ -187,5 +190,6 @@
 	<p>UX Prototype Team ©2016-2017 <a target="_blank" href="https://en.wikipedia.org/wiki/MIT_License" class='license'>MIT license</a></p>
 </footer>
 <script type="text/javascript">hljs.initHighlightingOnLoad();</script>
+ <script type="text/javascript">hljs.initHighlightingOnLoad();</script>
 </body>
 </html>
