--- a/prototypes/current/spark-pairing.html
+++ b/prototypes/current/spark-pairing.html
@@ -16,6 +16,8 @@
 <style type="text/css"></style>
 
   <link rel="stylesheet" type="text/css" href="../../css/detail.css" media="screen">
+  <link rel="stylesheet" type="text/css" href="../../css/monokai_sublime.css" media="screen">
+  <script type="text/javascript" src="../../js/highlight.pack.js"></script>
 </head>
 <body>
   <!-- nav -->
@@ -131,6 +133,7 @@
           <article class='article'>
 	<header class='article_header'>
 		<h1>Spark Device Pairing</h1>
+		
 	</header>
 	<div class='article_body'>
 		<h4 id="mobile-prototype">Mobile Prototype</h4>
@@ -175,8 +178,8 @@
 	<footer class='article_footer'>
 
 		<div class="pagination">
-			<a  class="prev" href="spark-space-privacy.html">← Prev</a>
-			<a  class="next" href="spark-obtp.html">Next →</a> 	 	
+			
+			<a  class="next" href="spark-message-list.html">Next →</a> 	 	
 		</div>		
 	</footer>-->
 </article>
@@ -188,11 +191,11 @@
     <ul class='sideMenu'>
 	
 	
+		<li><a class=current  href='spark-pairing.html'>Spark Device Pairing</a></li>
+	
 		<li><a   href='spark-message-list.html'>Spark Message List</a></li>
 	
 		<li><a   href='spark-space-privacy.html'>Spark Space Privacy</a></li>
-	
-		<li><a class=current  href='spark-pairing.html'>Spark Device Pairing</a></li>
 	
 		<li><a   href='spark-obtp.html'>Spark OBTP</a></li>
 	
@@ -207,5 +210,6 @@
 	<p>UX Prototype Team ©2016-2017 <a target="_blank" href="https://en.wikipedia.org/wiki/MIT_License" class='license'>MIT license</a></p>
 </footer>
 <script type="text/javascript">hljs.initHighlightingOnLoad();</script>
+ <script type="text/javascript">hljs.initHighlightingOnLoad();</script>
 </body>
 </html>
