--- a/prototypes/faq/chrome's-mobile-simulator.html
+++ b/prototypes/faq/chrome's-mobile-simulator.html
@@ -16,6 +16,8 @@
 <style type="text/css"></style>
 
   <link rel="stylesheet" type="text/css" href="../../css/detail.css" media="screen">
+  <link rel="stylesheet" type="text/css" href="../../css/monokai_sublime.css" media="screen">
+  <script type="text/javascript" src="../../js/highlight.pack.js"></script>
 </head>
 <body>
   <!-- nav -->
@@ -131,6 +133,9 @@
           <article class='article'>
 	<header class='article_header'>
 		<h1>Chrome&#39;s Mobile Simulator</h1>
+		
+			<p>Arthus Huang</p>
+		
 	</header>
 	<div class='article_body'>
 		<p>The Chrome on Mac OS / Windows offers a mobile simulator. You can preview how the prototype is on the real mobile devices according to this simlator. </p>
@@ -177,5 +182,6 @@
 	<p>UX Prototype Team ©2016-2017 <a target="_blank" href="https://en.wikipedia.org/wiki/MIT_License" class='license'>MIT license</a></p>
 </footer>
 <script type="text/javascript">hljs.initHighlightingOnLoad();</script>
+ <script type="text/javascript">hljs.initHighlightingOnLoad();</script>
 </body>
 </html>
