--- a/prototypes/faq/clear-cache.html
+++ b/prototypes/faq/clear-cache.html
@@ -16,6 +16,8 @@
 <style type="text/css"></style>
 
   <link rel="stylesheet" type="text/css" href="../../css/detail.css" media="screen">
+  <link rel="stylesheet" type="text/css" href="../../css/monokai_sublime.css" media="screen">
+  <script type="text/javascript" src="../../js/highlight.pack.js"></script>
 </head>
 <body>
   <!-- nav -->
@@ -131,6 +133,9 @@
           <article class='article'>
 	<header class='article_header'>
 		<h1>Clear Cache</h1>
+		
+			<p>Arthus Huang</p>
+		
 	</header>
 	<div class='article_body'>
 		<p>Browers usually cache datas to speed up loading web pages. This is why sometimes you can not see the latest version of the web pages. And cache sometimes will cause some bugs.</p>
@@ -181,5 +186,6 @@
 	<p>UX Prototype Team ©2016-2017 <a target="_blank" href="https://en.wikipedia.org/wiki/MIT_License" class='license'>MIT license</a></p>
 </footer>
 <script type="text/javascript">hljs.initHighlightingOnLoad();</script>
+ <script type="text/javascript">hljs.initHighlightingOnLoad();</script>
 </body>
 </html>
