--- a/research/firebase.html
+++ b/research/firebase.html
@@ -16,6 +16,8 @@
 <style type="text/css"></style>
 
   <link rel="stylesheet" type="text/css" href="../css/detail.css" media="screen">
+  <link rel="stylesheet" type="text/css" href="../css/monokai_sublime.css" media="screen">
+  <script type="text/javascript" src="../js/highlight.pack.js"></script>
 </head>
 <body>
   <!-- nav -->
@@ -122,6 +124,9 @@
           <article class='article'>
 	<header class='article_header'>
 		<h1>Firebase</h1>
+		
+			<p>Arthus Huang</p>
+		
 	</header>
 	<div class='article_body'>
 		<p>We&#39;ve done some researchs on how to build connection between devices. Web database is one of the choice. In our current projects, we choose <a href="https://firebase.google.com">Firebase</a>. Firebase saves us a lot of time on coding server end code. So we focus more on the front end coding.</p>
@@ -162,6 +167,8 @@
     <ul class='sideMenu'>
 	
 	
+		<li><a   href='write-a-music-score-by-html5.html'>Write music by HTML5</a></li>
+	
 		<li><a   href='webgl.html'>WebGL</a></li>
 	
 		<li><a   href='360°-camera-and-vr.html'>360° Camera and VR</a></li>
@@ -183,5 +190,6 @@
 	<p>UX Prototype Team ©2016-2017 <a target="_blank" href="https://en.wikipedia.org/wiki/MIT_License" class='license'>MIT license</a></p>
 </footer>
 <script type="text/javascript">hljs.initHighlightingOnLoad();</script>
+ <script type="text/javascript">hljs.initHighlightingOnLoad();</script>
 </body>
 </html>
