--- a/research/webgl.html
+++ b/research/webgl.html
@@ -16,6 +16,8 @@
 <style type="text/css"></style>
 
   <link rel="stylesheet" type="text/css" href="../css/detail.css" media="screen">
+  <link rel="stylesheet" type="text/css" href="../css/monokai_sublime.css" media="screen">
+  <script type="text/javascript" src="../js/highlight.pack.js"></script>
 </head>
 <body>
   <!-- nav -->
@@ -122,6 +124,9 @@
           <article class='article'>
 	<header class='article_header'>
 		<h1>WebGL</h1>
+		
+			<p>Arthus Huang</p>
+		
 	</header>
 	<div class='article_body'>
 		<p>WebGL let browsers have the ablility to render 3D things. </p>
@@ -150,7 +155,7 @@
 	<footer class='article_footer'>
 
 		<div class="pagination">
-			
+			<a  class="prev" href="write-a-music-score-by-html5.html">← Prev</a>
 			<a  class="next" href="360°-camera-and-vr.html">Next →</a> 	 	
 		</div>		
 	</footer>-->
@@ -162,6 +167,8 @@
     <!--
     <ul class='sideMenu'>
 	
+	
+		<li><a   href='write-a-music-score-by-html5.html'>Write music by HTML5</a></li>
 	
 		<li><a class=current  href='webgl.html'>WebGL</a></li>
 	
@@ -184,5 +191,6 @@
 	<p>UX Prototype Team ©2016-2017 <a target="_blank" href="https://en.wikipedia.org/wiki/MIT_License" class='license'>MIT license</a></p>
 </footer>
 <script type="text/javascript">hljs.initHighlightingOnLoad();</script>
+ <script type="text/javascript">hljs.initHighlightingOnLoad();</script>
 </body>
 </html>
