--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -128,10 +128,28 @@
         </div>
         </div>
       </a>
-        <div class="block-r" style="background-image:url('../img/experimental.jpg')"> <a href="./experimental/index.html"><span>Experimental Concepts</span></a></div>
-        <div class="block-l" style="background-image:url('../img/archiving.jpeg')"> <a href="./archived/index.html"><span>Archived Projects</span></a></div>
-        <div class="block-r" style="background-image:url('../img/faq.jpg')"> <a href="./guide/index.html"><span>FAQ & Troubleshoot</span></a></div>
+      <a class="sectionBlock" href="./experimental/index.html">
+        <div class="block-r" style="background-image:url('../img/experimental.jpg')"> 
+        <div class="block_cover"> 
+          <p class="list_space"></p>
+          <p class="list_title">Experimental Concepts</p></div>
+          </div>
+      </a>
+      <a class="sectionBlock" href="./archived/index.html">
+        <div class="block-l" style="background-image:url('../img/archiving.jpeg')"> 
+        <div class="block_cover"> 
+          <p class="list_space"></p>
+          <p class="list_title">Archived Projects</p></div></div>
+      </a>
+      <a class="sectionBlock" href="./guide/index.html">
+        <div class="block-r" style="background-image:url('../img/faq.jpg')"> 
+        <div class="block_cover"> 
+        <p class="list_space"></p>
+        <p class="list_title">FAQ & Troubleshoot</p>
+        </div>
+        </div>
       </div>
+      </a>
     </div>
     <div class="container_left"></div>
   </div>
