--- a/research/index.html
+++ b/research/index.html
@@ -135,7 +135,7 @@
               </a>  
                  <!-- <hr class="divider" />   -->
               
-              <a class="articleBlock" style="background-image: url('../img_data/research/360°VR6.png');" target='_self' href='360°-camera-and-vr.html'>
+              <a class="articleBlock" style="background-image: url('../img_data/research/360°VR6.PNG');" target='_self' href='360°-camera-and-vr.html'>
                   <div class='articleBlock_cover'>
                       <p class='list_space'></p>
                       <p class="list_title">360° Camera and VR</p>
