--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -15,7 +15,7 @@
 <script type="text/javascript" src="../js/highlight.pack.js"></script>
 
 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" type="text/css" href="../css/prototype.css" media="screen">
 </head>
 <body>
   <!-- nav -->
@@ -122,29 +122,25 @@
       <div class="block-wrapper">
       <a class="sectionBlock" href="./current/index.html">
         <div class="block-l"  style="background-image:url('../img/project.jpg')">
-        <div class="block_cover"> 
-        <p class="list_space"></p>
-        <p class="list_title">Current Projects</>
+        <div class="block_cover">
+        <p class="list_title">Current Projects</p>
         </div>
         </div>
       </a>
       <a class="sectionBlock" href="./experimental/index.html">
         <div class="block-r" style="background-image:url('../img/experimental.jpg')"> 
-        <div class="block_cover"> 
-          <p class="list_space"></p>
+        <div class="block_cover">
           <p class="list_title">Experimental Concepts</p></div>
           </div>
       </a>
       <a class="sectionBlock" href="./archived/index.html">
         <div class="block-l" style="background-image:url('../img/archiving.jpeg')"> 
-        <div class="block_cover"> 
-          <p class="list_space"></p>
+        <div class="block_cover">
           <p class="list_title">Archived Projects</p></div></div>
       </a>
       <a class="sectionBlock" href="./guide/index.html">
         <div class="block-r" style="background-image:url('../img/faq.jpg')"> 
-        <div class="block_cover"> 
-        <p class="list_space"></p>
+        <div class="block_cover">
         <p class="list_title">FAQ & Troubleshoot</p>
         </div>
         </div>
