add an article for animation

--- a/research/index.html
+++ b/research/index.html
@@ -125,6 +125,16 @@
               </a>  
                  <!-- <hr class="divider" />   -->
               
+              <a class="articleBlock" style="background-image: url('../img_data/research/Animation Physics1.jpg');" target='_self' href='animation-physics.html'>
+                  <div class='articleBlock_cover'>
+                      <p class='list_space'></p>
+                      <p class="list_title">Animation Physics</p>
+                      <p class='list_item_date'>2017-5-16</p>
+                      <p class='list_item_desc'>With the development of computer science technology, people are facing more and more information everyday. The traditional static way to display information can&#39;t always make our brains excited in the age of information explosion. In this artcile, I will show your the science behind the general animation.</p>
+                  </div>
+              </a>  
+                 <!-- <hr class="divider" />   -->
+              
               <a class="articleBlock" style="background-image: url('../img_data/research/WebGL2.png');" target='_self' href='webgl.html'>
                   <div class='articleBlock_cover'>
                       <p class='list_space'></p>
