--- a/research/write-a-music-score-by-html5.html
+++ b/research/write-a-music-score-by-html5.html
@@ -209,7 +209,7 @@ track.play(musicScore,90);
 
 		<div class="pagination">
 			
-			<a  class="next" href="webgl.html">Next →</a> 	 	
+			<a  class="next" href="animation-physics.html">Next →</a> 	 	
 		</div>		
 	</footer>-->
 </article>
@@ -222,6 +222,8 @@ track.play(musicScore,90);
 	
 	
 		<li><a class=current  href='write-a-music-score-by-html5.html'>Write music by HTML5</a></li>
+	
+		<li><a   href='animation-physics.html'>Animation Physics</a></li>
 	
 		<li><a   href='webgl.html'>WebGL</a></li>
 	
