--- a/research/3d-gyroscope.html
+++ b/research/3d-gyroscope.html
@@ -168,6 +168,8 @@
 	
 		<li><a   href='write-a-music-score-by-html5.html'>Write music by HTML5</a></li>
 	
+		<li><a   href='animation-physics.html'>Animation Physics</a></li>
+	
 		<li><a   href='webgl.html'>WebGL</a></li>
 	
 		<li><a   href='360°-camera-and-vr.html'>360° Camera and VR</a></li>
