Animation in browser
add atricle Animation in browser

--- a/research/animation-physics.html
+++ b/research/animation-physics.html
@@ -155,7 +155,7 @@
 
 		<div class="pagination">
 			<a  class="prev" href="write-a-music-score-by-html5.html">← Prev</a>
-			<a  class="next" href="webgl.html">Next →</a> 	 	
+			<a  class="next" href="animation-in-browser.html">Next →</a> 	 	
 		</div>		
 	</footer>-->
 </article>
@@ -170,6 +170,8 @@
 		<li><a   href='write-a-music-score-by-html5.html'>Write music by HTML5</a></li>
 	
 		<li><a class=current  href='animation-physics.html'>Animation Physics</a></li>
+	
+		<li><a   href='animation-in-browser.html'>Animation in browser</a></li>
 	
 		<li><a   href='webgl.html'>WebGL</a></li>
 	
