--- a/research/webgl.html
+++ b/research/webgl.html
@@ -155,7 +155,7 @@
 	<footer class='article_footer'>
 
 		<div class="pagination">
-			<a  class="prev" href="animation-physics.html">← Prev</a>
+			<a  class="prev" href="animation-in-browser.html">← Prev</a>
 			<a  class="next" href="360°-camera-and-vr.html">Next →</a> 	 	
 		</div>		
 	</footer>-->
@@ -171,6 +171,8 @@
 		<li><a   href='write-a-music-score-by-html5.html'>Write music by HTML5</a></li>
 	
 		<li><a   href='animation-physics.html'>Animation Physics</a></li>
+	
+		<li><a   href='animation-in-browser.html'>Animation in browser</a></li>
 	
 		<li><a class=current  href='webgl.html'>WebGL</a></li>
 	
