--- a/research/360°-camera-and-vr.html
+++ b/research/360°-camera-and-vr.html
@@ -176,6 +176,8 @@
 	
 		<li><a   href='animation-physics.html'>Animation Physics</a></li>
 	
+		<li><a   href='animation-in-browser.html'>Animation in browser</a></li>
+	
 		<li><a   href='webgl.html'>WebGL</a></li>
 	
 		<li><a class=current  href='360°-camera-and-vr.html'>360° Camera and VR</a></li>
