--- a/research/3d-gyroscope.html
+++ b/research/3d-gyroscope.html
@@ -170,6 +170,8 @@
 	
 		<li><a   href='animation-physics.html'>Animation Physics</a></li>
 	
+		<li><a   href='animation-in-browser.html'>Animation in browser</a></li>
+	
 		<li><a   href='webgl.html'>WebGL</a></li>
 	
 		<li><a   href='360°-camera-and-vr.html'>360° Camera and VR</a></li>
