--- a/research/index.html
+++ b/research/index.html
@@ -135,6 +135,16 @@
               </a>  
                  <!-- <hr class="divider" />   -->
               
+              <a class="articleBlock" style="background-image: url('../img_data/research/Animation in browser.jpg');" target='_self' href='animation-in-browser.html'>
+                  <div class='articleBlock_cover'>
+                      <p class='list_space'></p>
+                      <p class="list_title">Animation in browser</p>
+                      <p class='list_item_date'>2017-5-16</p>
+                      <p class='list_item_desc'>October 2014m HTML5 standard officially released. In the ealier time, the only officially standard was the HTML 4.01 which was released in 1999. Obviously, the HTML4 has been out of data for a long time. At the begining of the 21st century is a period of rapid development of the internet. In order to meet the increasingly complex requirements of the interaction, Java Applet, ActiveX, Flash, Microsoft Silverlight, SVG and the other front-end technology bloom in that era. Then we went through a battle of browser. In that time, developers have to write one style 4 times (-o, -webkit, -moz, -ms). Of course, there are still many ways to avoid writting 4 times. Sass, Less and some other solutions came to the world. Almost at this time, the internet for mobile rose. Because Android and IOS&#39;s native browser both use the webkit core, it is more convenient to coding HTML5 for mobile.</p>
+                  </div>
+              </a>  
+                 <!-- <hr class="divider" />   -->
+              
               <a class="articleBlock" style="background-image: url('../img_data/research/WebGL2.png');" target='_self' href='webgl.html'>
                   <div class='articleBlock_cover'>
                       <p class='list_space'></p>
