--- a/prototypes/faq/clear-cache.html
+++ b/prototypes/faq/clear-cache.html
@@ -134,7 +134,7 @@
 	<header class='article_header'>
 		<h1>Clear Cache</h1>
 		
-			<p>Arthus Huang</p>
+			<p><i style="background-image:url('../../img_data/avatar/Arthus Huang.png')"></i>Arthus Huang</p>
 		
 	</header>
 	<div class='article_body'>
