--- a/research/animation-in-browser.html
+++ b/research/animation-in-browser.html
@@ -125,7 +125,7 @@
 	<header class='article_header'>
 		<h1>Animation in browser</h1>
 		
-			<p>Arthus Huang</p>
+			<p><i style="background-image:url('../img_data/avatar/Arthus Huang.png')"></i>Arthus Huang</p>
 		
 	</header>
 	<div class='article_body'>
