Css change on home page

--- a/index.html
+++ b/index.html
@@ -110,11 +110,29 @@
       </div>-->
       <!--content blocks -->
       <div class="block-wrapper">
-        <div class="block-l" style="background-image:url('./img/prototype.jpeg')"> <a href="./prototypes/index.html"><span>Prototypes</span></a></div>
-        <div class="block-r" style="background-image:url('./img/research.jpg')"> <a href="./research/index.html"><span>Research</span></a></div>
+      <a class="sectionBlock" href="./prototypes/index.html">
+        <div class="block-l" style="background-image:url('./img/prototype.jpeg')"> 
+        <div class="block_cover">
+        <p class="list_title">Prototypes</p>
+        </div>
+      </div>
+      </a>
+      <a class="sectionBlock" href="./research/index.html">
+        <div class="block-r" style="background-image:url('./img/research.jpg')"> 
+        <div class="block_cover">
+        <p class="list_title">Research</p>
+        </div>
+        </div>
+      </a>
       </div>
       <div class="block-wrapper">
-        <div class="block-a" style="background-image:url('./img/team.jpg')"><a href="./team/index.html"><span>Team</span></a></div>
+      <a class="sectionBlock" href="./team/index.html">
+        <div class="block-a" style="background-image:url('./img/team.jpg')">
+        <div class="block_cover">
+        <p class="list_title">Team</p>
+        </div>
+      </div>
+      </a>
       </div>
     </div>
     
