--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       <!--content blocks -->
       <div class="block-wrapper">
       <a class="sectionBlock" href="./prototypes/index.html">
-        <div class="block-a" style="background-image:url('./img//lego/prototypes.jpg')"> 
+        <div class="block-a" style="background-image:url('./img//watercolor/experimental2.jpg')"> 
         <div class="block_coverA">
         <p class="list_title">Prototypes</p>
         </div>
@@ -125,14 +125,14 @@
       </div>
       <div class="block-wrapper">
       <a class="sectionBlock" href="./research/index.html">
-        <div class="block-l" style="background-image:url('./img//lego/research.jpg')"> 
+        <div class="block-l" style="background-image:url('./img//watercolor/research.jpg')"> 
         <div class="block_cover">
         <p class="list_title">Research</p>
         </div>
         </div>
       </a>
       <a class="sectionBlock" href="./team/index.html"> 
-        <div class="block-r" style="background-image:url('./img//lego/team.jpg')">
+        <div class="block-r" style="background-image:url('./img//watercolor/team.jpg')">
         <div class="block_cover">
         <p class="list_title">Team</p>
         </div>
