--- a/prototypes/archived/index.html
+++ b/prototypes/archived/index.html
@@ -224,9 +224,11 @@
             </div>
             </div>
         </div>
+        <div class="footerWrap">
       <footer class='copyright'>
-	<p>UX Prototype Team ©2016-2017 <a target="_blank" href="https://en.wikipedia.org/wiki/MIT_License" class='license'>MIT license</a></p>
+	<p>The Design Group Prototype Team (For Internal Use Only) Cisco Systems ©2016-2017 <a target="_blank" href="https://en.wikipedia.org/wiki/MIT_License" class='license'>MIT license</a></p>
 </footer>
 <script type="text/javascript">hljs.initHighlightingOnLoad();</script>
+  </div>
   </body>
 </html>
