--- a/prototypes/current/spark-obtp.html
+++ b/prototypes/current/spark-obtp.html
@@ -218,6 +218,8 @@ The parameter&#39;s value can be &#39;CCDS&#39;, &#39;UE&#39;, &#39;UT&#39;, &#3
     <ul class='sideMenu'>
 	
 	
+		<li><a   href='spark-pairing.html'>Spark Device Pairing</a></li>
+	
 		<li><a   href='filter-and-search.html'>Filter and Search</a></li>
 	
 		<li><a   href='information-architecture-p2.html'>IA (Flagpole)</a></li>
@@ -225,8 +227,6 @@ The parameter&#39;s value can be &#39;CCDS&#39;, &#39;UE&#39;, &#39;UT&#39;, &#3
 		<li><a   href='information-architecture.html'>IA (Phase 1)</a></li>
 	
 		<li><a   href='pstn.html'>PSTN</a></li>
-	
-		<li><a   href='spark-pairing.html'>Spark Device Pairing</a></li>
 	
 		<li><a   href='spark-message-list.html'>Spark Message List</a></li>
 	
@@ -241,10 +241,12 @@ The parameter&#39;s value can be &#39;CCDS&#39;, &#39;UE&#39;, &#39;UT&#39;, &#3
  </div>   
   </div>
  <!-- footer --> 
+ <div class="footerWrap">
  <footer class='copyright'>
-	<p>UX Prototype Team ©2016-2017 <a target="_blank" href="https://en.wikipedia.org/wiki/MIT_License" class='license'>MIT license</a></p>
+	<p>The Design Group Prototype Team (For Internal Use Only) Cisco Systems ©2016-2017 <a target="_blank" href="https://en.wikipedia.org/wiki/MIT_License" class='license'>MIT license</a></p>
 </footer>
 <script type="text/javascript">hljs.initHighlightingOnLoad();</script>
+ </div>
  <script type="text/javascript">hljs.initHighlightingOnLoad();</script>
 </body>
 </html>
