--- a/prototypes/archived/spark-p1-2016.html
+++ b/prototypes/archived/spark-p1-2016.html
@@ -207,10 +207,12 @@ To let users to adapt to our new Sparl desogm more smoothly, UXCCDS team defined
  </div>   
   </div>
  <!-- footer --> 
+ <div class="footerWrap">
  <footer class='copyright'>
-	<p>UX Prototype Team ©2016-2017 <a target="_blank" href="https://en.wikipedia.org/wiki/MIT_License" class='license'>MIT license</a></p>
+	<p>The Design Group Prototype Team (For Internal Use Only) Cisco Systems ©2016-2017 <a target="_blank" href="https://en.wikipedia.org/wiki/MIT_License" class='license'>MIT license</a></p>
 </footer>
 <script type="text/javascript">hljs.initHighlightingOnLoad();</script>
+ </div>
  <script type="text/javascript">hljs.initHighlightingOnLoad();</script>
 </body>
 </html>
