--- a/prototypes/current/information-architecture.html
+++ b/prototypes/current/information-architecture.html
@@ -208,6 +208,8 @@
     <ul class='sideMenu'>
 	
 	
+		<li><a   href='spark-pairing.html'>Spark Device Pairing</a></li>
+	
 		<li><a   href='filter-and-search.html'>Filter and Search</a></li>
 	
 		<li><a   href='information-architecture-p2.html'>IA (Flagpole)</a></li>
@@ -215,8 +217,6 @@
 		<li><a class=current  href='information-architecture.html'>IA (Phase 1)</a></li>
 	
 		<li><a   href='pstn.html'>PSTN</a></li>
-	
-		<li><a   href='spark-pairing.html'>Spark Device Pairing</a></li>
 	
 		<li><a   href='spark-message-list.html'>Spark Message List</a></li>
 	
@@ -231,10 +231,12 @@
  </div>   
   </div>
  <!-- footer --> 
+ <div class="footerWrap">
  <footer class='copyright'>
-	<p>UX Prototype Team ©2016-2017 <a target="_blank" href="https://en.wikipedia.org/wiki/MIT_License" class='license'>MIT license</a></p>
+	<p>The Design Group Prototype Team (For Internal Use Only) Cisco Systems ©2016-2017 <a target="_blank" href="https://en.wikipedia.org/wiki/MIT_License" class='license'>MIT license</a></p>
 </footer>
 <script type="text/javascript">hljs.initHighlightingOnLoad();</script>
+ </div>
  <script type="text/javascript">hljs.initHighlightingOnLoad();</script>
 </body>
 </html>
