--- a/prototypes/current/pstn.html
+++ b/prototypes/current/pstn.html
@@ -175,7 +175,7 @@
 
 		<div class="pagination">
 			<a  class="prev" href="information-architecture.html">← Prev</a>
-			<a  class="next" href="spark-pairing.html">Next →</a> 	 	
+			<a  class="next" href="spark-message-list.html">Next →</a> 	 	
 		</div>		
 	</footer>-->
 </article>
@@ -187,6 +187,8 @@
     <ul class='sideMenu'>
 	
 	
+		<li><a   href='spark-pairing.html'>Spark Device Pairing</a></li>
+	
 		<li><a   href='filter-and-search.html'>Filter and Search</a></li>
 	
 		<li><a   href='information-architecture-p2.html'>IA (Flagpole)</a></li>
@@ -194,8 +196,6 @@
 		<li><a   href='information-architecture.html'>IA (Phase 1)</a></li>
 	
 		<li><a class=current  href='pstn.html'>PSTN</a></li>
-	
-		<li><a   href='spark-pairing.html'>Spark Device Pairing</a></li>
 	
 		<li><a   href='spark-message-list.html'>Spark Message List</a></li>
 	
@@ -210,10 +210,12 @@
  </div>   
   </div>
  <!-- footer --> 
+ <div class="footerWrap">
  <footer class='copyright'>
-	<p>UX Prototype Team ©2016-2017 <a target="_blank" href="https://en.wikipedia.org/wiki/MIT_License" class='license'>MIT license</a></p>
+	<p>The Design Group Prototype Team (For Internal Use Only) Cisco Systems ©2016-2017 <a target="_blank" href="https://en.wikipedia.org/wiki/MIT_License" class='license'>MIT license</a></p>
 </footer>
 <script type="text/javascript">hljs.initHighlightingOnLoad();</script>
+ </div>
  <script type="text/javascript">hljs.initHighlightingOnLoad();</script>
 </body>
 </html>
