--- a/prototypes/faq/index.html
+++ b/prototypes/faq/index.html
@@ -142,7 +142,7 @@
                     <div class='articleBlock_cover'>
                         <p class='list_space'></p>
                         <p class="list_title">Clear Cache</p>
-                        <p class='list_item_date'>2017-5-15</p>
+                        <p class='list_item_date'>2017-5-18</p>
                         <p class='list_item_desc'>Browers usually cache datas to speed up loading web pages. This is why sometimes you can not see the latest version of the web pages. And cache sometimes will cause some bugs.</p>
                     </div>
                     <div class="list_img" style="background-image: url('../../img_data/guide/clearCache1.png');"></div>
@@ -152,7 +152,7 @@
                     <div class='articleBlock_cover'>
                         <p class='list_space'></p>
                         <p class="list_title">Install Web App</p>
-                        <p class='list_item_date'>2017-5-15</p>
+                        <p class='list_item_date'>2017-5-18</p>
                         <p class='list_item_desc'>To achieve the best experience of our mobile prototypes, we recommand you installing the prototypes as web apps on your mobile devices.</p>
                     </div>
                     <div class="list_img" style="background-image: url('../../img_data/guide/InstallWebAppIOS1.PNG');"></div>
@@ -162,7 +162,7 @@
                     <div class='articleBlock_cover'>
                         <p class='list_space'></p>
                         <p class="list_title">Chrome&#39;s Mobile Simulator</p>
-                        <p class='list_item_date'>2017-5-15</p>
+                        <p class='list_item_date'>2017-5-18</p>
                         <p class='list_item_desc'>The Chrome on Mac OS / Windows offers a mobile simulator. You can preview how the prototype is on the real mobile devices according to this simlator. </p>
                     </div>
                     <div class="list_img" style="background-image: url('../../img_data/guide/ChromeSimulator1.png');"></div>
@@ -174,9 +174,11 @@
             </div>
             </div>
         </div>
+        <div class="footerWrap">
       <footer class='copyright'>
-	<p>UX Prototype Team ©2016-2017 <a target="_blank" href="https://en.wikipedia.org/wiki/MIT_License" class='license'>MIT license</a></p>
+	<p>The Design Group Prototype Team (For Internal Use Only) Cisco Systems ©2016-2017 <a target="_blank" href="https://en.wikipedia.org/wiki/MIT_License" class='license'>MIT license</a></p>
 </footer>
 <script type="text/javascript">hljs.initHighlightingOnLoad();</script>
+  </div>
   </body>
 </html>
