Team member page update + css update

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       <!--content blocks -->
       <div class="block-wrapper">
       <a class="sectionBlock" href="./prototypes/index.html">
-        <div class="block-a" style="background-image:url('./img/20170808/prototype.svg')"> 
+        <div class="block-a" style="background-image:url('./img/20170808/prototype.svg'); background-position: -34px -23px; background-color:#F05424; "> 
         <div class="block_cover">
         <p class="list_title">Prototypes</p>
         </div>
