--- a/prototypes/archived/webex-dashboard-on-ios.html
+++ b/prototypes/archived/webex-dashboard-on-ios.html
@@ -166,8 +166,8 @@
 	<footer class='article_footer'>
 
 		<div class="pagination">
-			<a  class="prev" href="webex-personal-room-page.html">← Prev</a>
-			<a  class="next" href="webex-on-wp8.html">Next →</a> 	 	
+			<a  class="prev" href="webex-thinclient.html">← Prev</a>
+			<a  class="next" href="personal-meeting-room.html">Next →</a> 	 	
 		</div>		
 	</footer>-->
 </article>
@@ -179,19 +179,29 @@
     <ul class='sideMenu'>
 	
 	
-		<li><a   href='spark-p5-2016.html'>Spark P5 2016</a></li>
+		<li><a   href='spark-space-privacy.html'>Spark Space Privacy</a></li>
+	
+		<li><a   href='webex-on-wp8.html'>WebEx on WP8</a></li>
+	
+		<li><a   href='spark-obtp.html'>Spark OBTP</a></li>
 	
 		<li><a   href='spark-p1-2016.html'>Spark P1 2016</a></li>
 	
-		<li><a   href='webex-&amp;-spark-help.html'>WebEx &amp; Spark Help</a></li>
+		<li><a   href='spark-p5-2016.html'>Spark P5 2016</a></li>
 	
-		<li><a   href='webex-thinclient.html'>WebEx ThinClient</a></li>
+		<li><a   href='spark-pairing.html'>Spark Device Pairing</a></li>
+	
+		<li><a   href='spark-message-list.html'>Spark Message List</a></li>
+	
+		<li><a   href='spark20170124.html'>Spark 2017.1.24</a></li>
+	
+		<li><a   href='webex-&amp;-spark-help.html'>WebEx &amp; Spark Help</a></li>
 	
 		<li><a   href='webex-personal-room-page.html'>WebEx Personal Room Page</a></li>
 	
-		<li><a class=current  href='webex-dashboard-on-ios.html'>WebEx dashboard on IOS</a></li>
+		<li><a   href='webex-thinclient.html'>WebEx ThinClient</a></li>
 	
-		<li><a   href='webex-on-wp8.html'>WebEx on WP8</a></li>
+		<li><a class=current  href='webex-dashboard-on-ios.html'>WebEx dashboard on IOS</a></li>
 	
 		<li><a   href='personal-meeting-room.html'>Personal Meeting Room</a></li>
 	
