--- a/research/animation-in-browser.html
+++ b/research/animation-in-browser.html
@@ -24,6 +24,7 @@
 </script>
 <script type="text/javascript" src="../js/jquery-2.0.0.min.js"></script>
 <script type="text/javascript" src="../js/highlight.pack.js"></script>
+<script type="text/javascript" src="../js/ash.js"></script>
 <style type="text/css"></style>
 
   <link rel="stylesheet" type="text/css" href="../css/detail.css" media="screen">
@@ -34,7 +35,7 @@
   <!-- nav -->
   <header class="header">
   	<div class="NavContent">
-	    <a href="/" class="logo"><img src="../img/20170808/logo.svg"><span>Prototype</span><span class="orange">Depot</span></a>
+	    <a href="/" class="logo"><img src="../img/20170808/logo.svg"><span>Prototype//:&nbsp;</span><span class="orange">Depot</span></a>
 	    <input class="menu-btn" type="checkbox" id="menu-btn" />
 	    <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
 		<ul class="Nav">
