--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
       <div class="block-wrapper">
         <a class="sectionBlock bg_orange" id='sectionBlock_prototype' href="./prototypes/index.html">
           <div class="block-bg">
-              <svg width="1046px" height="251px" viewBox="0 0 1046 251"  preserveAspectRatio="xMinYMin meet"  version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+              <svg width="1046px" height="251px" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"> <!-- viewBox="0 0 1046 251"  preserveAspectRatio="xMinYMin meet"  removed 081017-->
     <!-- Generator: Sketch 46.1 (44463) - http://www.bohemiancoding.com/sketch -->
 <title>Mobile</title>
     <desc>Created with Sketch.</desc>
@@ -365,7 +365,7 @@
   </div>
   <div class="footerWrap">
 <footer class='copyright'>
-	<p>The Design Group Prototype Team (For Internal Use Only) Cisco Systems ©2016-2017 <a target="_blank" href="https://en.wikipedia.org/wiki/MIT_License" class='license'>MIT license</a></p>
+	<p>The Design Group Prototype Team (For Internal Use Only)<br>Cisco Systems ©2016-2017 <a target="_blank" href="https://en.wikipedia.org/wiki/MIT_License" class='license'>MIT license</a></p>
 </footer>
 <script type="text/javascript">hljs.initHighlightingOnLoad();</script>
 </div>
