--- a/prototypes/archived/index.html
+++ b/prototypes/archived/index.html
@@ -193,7 +193,7 @@
                     <div class='articleBlock_cover archived_articleBlock_cover'>
                         <p class='list_space'></p>
                         <p class="list_title">Spark Device Pairing</p>
-                        <p class='list_item_date'>2017-8-10</p>
+                        <p class='list_item_date'>2017-8-9</p>
                         <p class='list_item_desc'>Mobile and Desktop Spark Prototype featuring the pairing functions</p>
                     </div>
                     <div class="list_img" style="background-image: url('../../img_data/prototypes/cover/Spark Pairing_Cover.png');"></div>
@@ -237,7 +237,7 @@
         </div>
         
       <footer class='copyright'>
-	<p>The Design Group Prototype Team (For Internal Use Only) Cisco Systems ©2016-2017 <a target="_blank" href="https://en.wikipedia.org/wiki/MIT_License" class='license'>MIT license</a></p>
+	<p>The Design Group Prototype Team (For Internal Use Only)<br>Cisco Systems ©2016-2017 <a target="_blank" href="https://en.wikipedia.org/wiki/MIT_License" class='license'>MIT license</a></p>
 </footer>
 <script type="text/javascript">hljs.initHighlightingOnLoad();</script>
   
