--- a/prototypes/current/information-architecture.html
+++ b/prototypes/current/information-architecture.html
@@ -149,9 +149,10 @@
 		
 	</header>
 	<div class='article_body'>
-		<h4 id="mobile-prototype-vpn-required-">Mobile Prototype (VPN Required)</h4>
+		<p><img src="../../../img/VPN.png" alt="vpn required"/></p>
+<h4 id="mobile-prototype">Mobile Prototype</h4>
 <p><a href="https://uxprototype.cisco.com/projects/Reskin/wap/IA2-P1/page/spark.html">https://uxprototype.cisco.com/projects/Reskin/wap/IA2-P1/page/spark.html</a></p>
-<h4 id="desktop-prototype-vpn-required-">Desktop Prototype (VPN Required)</h4>
+<h4 id="desktop-prototype">Desktop Prototype</h4>
 <p><a href="https://uxprototype.cisco.com/projects/Reskin/wap/IA/IA-phase1.html">https://uxprototype.cisco.com/projects/Reskin/wap/IA/IA-phase1.html</a></p>
 <h1 id="instructions">Instructions</h1>
 <p><img src="../../img_data/prototypes/Mobile-2x.png" alt="mobile"/>
@@ -224,7 +225,7 @@
  <!-- footer --> 
  <div class="footerWrap">
  <footer class='copyright'>
-	<p>The Design Group Prototype Team (For Internal Use Only) Cisco Systems ©2016-2017 <a target="_blank" href="https://en.wikipedia.org/wiki/MIT_License" class='license'>MIT license</a></p>
+	<p>The Design Group Prototype Team (For Internal Use Only)<br>Cisco Systems ©2016-2017 <a target="_blank" href="https://en.wikipedia.org/wiki/MIT_License" class='license'>MIT license</a></p>
 </footer>
 <script type="text/javascript">hljs.initHighlightingOnLoad();</script>
  </div>
