New img and article update

--- a/prototypes/current/information-architecture.html
+++ b/prototypes/current/information-architecture.html
@@ -149,7 +149,7 @@
 		
 	</header>
 	<div class='article_body'>
-		<p><img src="../../../img/VPN.png" alt="vpn required"/></p>
+		<p><img src="../../img_data/prototypes/VPN.png" alt="vpn required"/></p>
 <h4 id="mobile-prototype">Mobile Prototype</h4>
 <p><a href="https://uxprototype.cisco.com/projects/Reskin/wap/IA2-P1/page/spark.html">https://uxprototype.cisco.com/projects/Reskin/wap/IA2-P1/page/spark.html</a></p>
 <h4 id="desktop-prototype">Desktop Prototype</h4>
